# boardgame-ai-arena

./: .gitignore  Dockerfile  Dockerfile.agent  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  pyproject.toml  start.sh
agent_system/: README.md  agent-architecture.md
agent_system/definition/: agent_spec.py
agent_system/tests/: test_convergence.py
agent_system/training/: README.md  quick_train.sh
agents/: agent-apis.md
agents/agent_defs/: greedy_topk3.yaml  minimax.yaml  minimax_medium.yaml  random.yaml
arena/: README.md  aggregator.py  db.py  experiment_runner.py  runner.py
arena/agent_defs/: greedy.yaml  (+3 more)
backend-server/: test_integration.py
engine/: Cargo.toml  pyproject.toml
engine/game_manager/: __init__.py  ffi.py  game_manager.py  types.py
engine/game_manager/tests/end_to_end/: test_full_game_replay.py
engine/game_manager/tests/units/: test_ffi.py  test_game_manager.py  test_types.py
engine/src/: lib.rs  python_bindings.rs
engine/src/game_manager/: mod.rs
engine/src/rule_engine/: calculation.rs  error.rs  mod.rs  model.rs  rule.rs  topology.rs
engine/tests/: test_full_game_e2e.rs  test_wall_blockage_e2e.rs  test_wall_blockage_minimal_e2e.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
k8s/: agent.yaml  backend.yaml  frontend.yaml
scripts/: diagnose_dqn_eval.py  evaluate_dqn_head_to_head.py  run_arena.py  run_experiment.py  train_dqn.py
training-dashboard/: Dockerfile  README.md  backend_entry.py  docker-compose.yml  docker-entrypoint.sh  requirements.txt
(+285 files in other folders)
