[project]
name = "quoridor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["backend-server", "."]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
